end of part one